--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<p>Email: <a href="mailto:info@zeenlounge.com">info@zeenlounge.com</a><br />
 				Tel<a href="tel:+90 462 666 5 666">+90 462 666 5 666</a><br /></p>
 				Whatsapp: <a href="https://api.whatsapp.com/send?phone=+905324959336&text=Merhaba%21%20">+90 532 495 93 36</a></p>
-			<p>Uzungöl Mah. No:38<br />
+			<p><a href="https://uzungol.net" rel="dofollow">Uzungöl</a> Mah. No:38<br />
 				Çaykara Trabzon</p>
 		</section>
 		
